--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+html {
+  scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+  width: 0.3rem;
+  border-radius: 50%;
+}
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+  background: #212ea0;
+  /* border-radius: 0.5rem; */
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #212ea0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  padding: 0 10% 0 10%;
+}
+.btn {
+  background: #fff;
+  color: #212121;
+  padding: 14px 25px;
+  font-size: 16px;
+  border: 0;
+  border-radius: 30px;
+  cursor: pointer;
+  outline: none;
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+}
+.btn img {
+  width: 20px;
+  margin-left: 10px;
+}
+.btn.dark-btn {
+  background-color: #212ea0;
+  color: #fff;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 0 5% 0 5%;
+  }
+  .btn {
+    padding: 14px 22px;
+  }
 }
