--- a/src/Components/Testinomials/Testinomials.css
+++ b/src/Components/Testinomials/Testinomials.css
@@ -28,7 +28,7 @@
   width: 200%;
   overflow-x: hidden;
   transition: 0.5s;
-  transform: translateX(-25%);
+  /* transform: translateX(-50%); */
 }
 .slider ul li {
   list-style: none;
