--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   font-family: "Outfit", sans-serif;
+  text-transform: capitalize;
 }
 body {
   background-color: #f5f5f5;
